# data_camp_exp

./: .gitignore  Dockerfile  README.md  app.sh  b.sh  pyproject.toml  questions.md  r.sh  rem.sh  time_series_r_course_qa.md
data/: .env.example
docs/: backlog.md  bundle_prep_req.md  codex_fix_question_cache_pipeline.md  codex_tasking_traceable_question_cache.md  course_yaml_learning_extraction_prompts_for_codex.md  current_architecture_and_production_options.md  current_pipeline_artifact_contract.md  data_products_report_backlog.md  data_products_report_proposal.md  data_products_report_proposal_response.md  data_products_scale_report.md  data_products_scale_report_artifact.md  intermediate_response_notes.md  interrogation_v_41.md  llm_metering_backlog.md  metering.md  pipeline_memo.md  prefect_pipeline_backlog.md  prefect_pipeline_bundle.md  prefect_pipeline_codex_bundle.md  prefect_pipeline_runbook.md  production_refactor_backlog.md  project_spec.md  provisional_response_serving_memo.md  question-genration-llm-pipeline-enhancement.md  question_cache_eval_7630.yaml  question_cache_pipeline_review_report.md  question_gen_algo.md  question_gen_algo_v2.md  question_gen_algo_v2_backlog.md  question_gen_algo_v2_proposal.md  question_gen_algo_v2_proposal_2.md  question_gen_alo_v2.md  question_gen_v2_implementation_report.md  question_gen_v3_backlog.md  question_gen_v3_implementation_report.md  question_gen_v4_1_implementation_report.md  question_gen_v4_backlog.md  question_generation_algorithm_spec.md  question_generation_llm_pipeline_enhancement_backlog.md  (+9 more)
(+1163 files in other folders)
